2007-05-24  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.92 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* VERSION: Bumped to 2.15.92.

2007-05-19  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/guile-support.h: 
	* gnome/gobject/guile-support.c (scm_with_guile): Add a guile 1.6
	shim of dubious correctness.

2007-05-13  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/glib.defs-type-ignores: 
	* gnome/overrides/Makefile.am: Add type ignores for GLib.

	* package.ac: Update GLib requirement to 2.10, corresponding to
	the 2.16 release of the Gnome Developer Platform.

	* gnome/overrides/glib.defs: Update ignores for new autogenerated
	glib.defs in the defs module. I have mostly ignored everything;
	the notable addition is GBookmarkFile. I also didn't ignore the
	unicode functions, figuring they will be useful while Guile
	doesn't have any of its own.

	* gnome/gw/glib-spec.scm (initialize): Add alias for time_t as
	long.

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/glib-support.c (_wrap_g_main_loop_run): Rework signal
	handling code to use a special gsource. The source is woken when
	SIGINT is delivered, via writing a byte on an fd, which is what
	g_main_context_wakeup does; however it also does some locking.
	Unsure about the safety of all of this, we'll see how it works
	out.

	* == Released guile-gnome-platform version 2.15.91 ==

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* VERSION: Bumped to 2.15.91.

2007-05-06  Andy Wingo  <wingo@pobox.com>

	* examples/example-1.scm: Put in a modeline.

	* gnome/gw/support/gobject.scm (find-type-rule): Look up type
	rules recursively, fixes a very old bug in which out parameters
	are only recognized automatically within the same wrapset that
	defines the rule.

	* gnome/gw/glib-spec.scm (initialize): Fix char* being marked for
	automatic 'out aliasing.

2007-05-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gobject.scm: New export, lookup-type-by-alias.